--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 
+#server.port=8200
+
 #spring-hibernate for mysql
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/db_sell?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=nhanbn98
+
+#config security
+#security.basic.enable: false
+#security.ignored=/**
