--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 #spring-hibernate for mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 #connection MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_sell?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
